@@ -1,6 +1,8 @@
 git-annex (8.20210331) UNRELEASED; urgency=medium
 
   * Fix build with persistent-2.12.0.1
+  * Avoid excess commits to the git-annex branch when stall detection is
+    enabled.
 
  -- Joey Hess <id@joeyh.name>  Thu, 01 Apr 2021 12:17:26 -0400
 
